# humoto

./: .envrc  README.md  install_uv.sh  pyproject.toml  render_example.sh  render_humoto_pytorch3d.py
human_model/: __init__.py
scripts/: clear_human_scale.sh  extract_pk_data.sh  transfer_human_model.sh
utils/: load_humoto.py
