[project]
name = "humoto"
version = "0.1.0"
description = "Human motion rendering and processing toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-contrib-python==4.9.0.80",
    "opencv-python==4.9.0.80",
    "PyYAML==6.0.2",
    "scipy==1.15.3",
    "trimesh==4.7.4",
    "iopath",
    "setuptools",
    "wheel",
    "ninja",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["human_model", "utils"]
